Fixed some styling issues found from testing layout on mobile.

--- a/src/styles/about/about.scss
+++ b/src/styles/about/about.scss
@@ -2,7 +2,7 @@
 
 .about {
   display: flex;
-  margin-left: 8rem;
+  margin-left: 6rem;
 }
 
 .about-us-content {
