--- a/src/styles/customers/customers.scss
+++ b/src/styles/customers/customers.scss
@@ -1,7 +1,7 @@
 @import "../common/common";
 
 .customers {
-  margin-left: 8rem;
+  margin-left: 6rem;
   padding-bottom: 6.6rem;
   background-color: var(--false-grey);
   
