--- a/src/styles/header/header.scss
+++ b/src/styles/header/header.scss
@@ -5,7 +5,7 @@
 }
 
 .header {
-  margin-left: 8rem;
+  margin-left: 6rem;
   height: 100vh;
   background: linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)), 
               url(/public/img/header-2.jpg) center no-repeat;
