--- a/src/styles/navbar/navbar.scss
+++ b/src/styles/navbar/navbar.scss
@@ -4,7 +4,7 @@
   @include flex-column();
   justify-content: space-between;
   height: 100%;
-  width: 8rem;
+  width: 6rem;
   background-color: var(--white);
   position: fixed;
   z-index: 2;
@@ -57,7 +57,7 @@
 .navigation {
   @include flex-column();
   justify-content: space-between;
-  left: -32rem;
+  left: -34rem;
   position: fixed;
   width: 40rem;
   height: 100%;
