--- a/src/styles/rooms/rooms.scss
+++ b/src/styles/rooms/rooms.scss
@@ -18,7 +18,7 @@
 }
 
 .rooms {
-  margin-left: 8rem;
+  margin-left: 6rem;
 }
 
 .rooms-cards-wrapper {
